--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.28",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "date-fns": "^2.29.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
