--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "*",
+    "@types/pg": "^8.6.5",
+    "dotenv": "^16.0.2",
+    "pg": "^8.8.0",
     "ts-node": "10.9.1",
     "typescript": "^4.6.3"
   }
