--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "@mui/material": "^5.6.2",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.185",
     "@types/node": "^16.11.28",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "date-fns": "^2.29.2",
+    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
