Dockerize frontend & backend

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-BACKEND_HOST=0.0.0.0 
+REACT_APP_BACKEND_URL=http://localhost:8100/
+
+BACKEND_HOST=0.0.0.0
 BACKEND_PORT=8100
+
 PG_USER='postgres'
 PG_PORT=5432
 PG_PASSWORD=12345678
