--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ REACT_APP_BACKEND_URL=http://localhost:8100/
 BACKEND_HOST=0.0.0.0
 BACKEND_PORT=8100
 
-PG_USER='postgres'
-PG_PORT=5432
-PG_PASSWORD=12345678
+POSTGRES_USER='postgres'
+POSTGRES_PASSWORD=123
+POSTGRES_HOST='postgres'
+POSTGRES_PORT=5432
