--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.1",
+    "sass": "^1.55.0",
     "typescript": "^4.6.3"
   },
   "scripts": {
