Fix initialized posgress before is ready

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
       dockerfile: backend.docker
       context: .
     volumes:
+      - ./backend/index.ts:/app/index.ts
       - ./backend/src:/app/src
       - ./types:/types
     ports:
